# Spectrum

./: .clang-format  .gitignore  .gitmodules  :w  CMakeLists.txt  Doxyfile  README.md  file  out
assets/fonts/: info.txt
assets/shader-test/: quad_shader.frag
assets/shaders/: pixalization.frag  vignette.frag
assets/shaders/bloom/: blur_pass.frag  bright_pass.frag  combine_pass.frag
assets/shaders/vignette/: vignette.frag
src/: CMakeLists.txt  main.cpp
src/Components/: BulletComponent.hpp  CollectableComponent.hpp  DamageComponent.hpp  DiveComponent.hpp  EnemyComponent.hpp  HealthComponent.hpp  KnockBackComponent.hpp  LightCollectorComponent.hpp  LightComponent.hpp  PowerUpComponent.hpp  ShootComponent.hpp  TrackingComponent.hpp  TransformEffects.hpp
src/Components/BulletComponent/: BulletComponent.hpp
src/Components/GemComponent/: GemComponent.hpp
src/Components/ShootComponent/: ShootComponent.hpp
src/Components/Tags/: BulletTag.hpp  Collector.hpp  EnemyTag.hpp  ExplosionTag.hpp  HealthPack.hpp  HealthPacker.hpp  PlayerTag.hpp
src/Components/TrackingComponent/: TrackingComponent.hpp
src/Events/: ShotsFiredEvent.hpp  TimerTickEvent.hpp
src/Events/Handlers/: PlayerEventHandler.cpp  PlayerEventHandler.hpp
src/Gems/: Gem.hpp
src/Gems/RedGem/: RedGem.cpp  RedGem.hpp
src/Modifiers/: Modifier.hpp
src/Modifiers/DamageBoostModifier/: DamageModifier.cpp  DamageModifier.hpp
src/Modifiers/FireRateModifier/: FireRateModifier.cpp  FireRateModifier.hpp
src/Modifiers/HealthBoost/: HealthBoostModifier.cpp  HealthBoostModifier.hpp
src/Modifiers/MaxHealthModifier/: MaxHealthModifier.cpp  MaxHealthModifier.hpp
src/Modifiers/SpeedModifier/: SpeedModifier.cpp  SpeedModifier.hpp
src/Scenes/DeathScreen/: DeathScreen.cpp  DeathScreen.hpp  SharedDeathData.hpp
src/Scenes/DeathScreen/Layers/: MainLayer.cpp  MainLayer.hpp
src/Scenes/GameScene/: GameScene.cpp  GameScene.hpp  SharedGameData.hpp
src/Scenes/GameScene/Layers/: GameUILayer.cpp  GameUILayer.hpp  MainGameLayer.cpp  MainGameLayer.hpp  ParticleLayer.cpp  ParticleLayer.hpp
src/Scenes/GameScene/Signals/: GamePause.hpp  GameResume.hpp
src/Scenes/MainMenu/: MainMenu.cpp  MainMenu.hpp
src/Scenes/MainMenu/Layers/: MainMenuLayer.cpp  MainMenuLayer.hpp  ShipSelectionLayer.cpp  ShipSelectionLayer.hpp
src/Scenes/MainMenu/Signals/: ShipSelectionAbortedSignal.hpp  ShipSelectionStartedSignal.hpp
src/Scenes/PauseMenu/: PauseMenu.cpp  PauseMenu.hpp
src/Scenes/PauseMenu/Layers/: MainPauseLayer.cpp  MainPauseLayer.hpp
src/ShaderEffects/Bloom/: Bloom.cpp  Bloom.hpp
src/ShaderEffects/Vignette/: Vignette.cpp  Vignette.hpp
src/Ship/: Ship.hpp  ShipDataBase.hpp
src/Shop/: Shop.cpp  Shop.hpp
src/Signals/: EntityDamagedSignal.hpp  EntityDiedSignal.hpp  PlayerSpawnedSignal.hpp
src/Signals/Handlers/: EntityEventHandler.cpp  EntityEventHandler.hpp  PlayerEventHandler.cpp  PlayerEventHandler.hpp
src/SpawnManager/: SpawnManager.cpp  SpawnManager.hpp
src/Spawner/: Spawner.cpp  Spawner.hpp
src/Systems/BulletSystem/: BulletSystem.cpp  BulletSystem.hpp
src/Systems/CollectionSystem/: CollectionSystem.cpp  CollectionSystem.hpp
src/Systems/DiveSystem/: DiveSystem.cpp  DiveSystem.hpp
src/Systems/GemSystem/: GemSystem.cpp  GemSystem.hpp
src/Systems/HealthSystem/: HealthSystem.cpp  HealthSystem.hpp
src/Systems/LightCollectionSystem/: LightCollectionSystem.cpp  LightCollectionSystem.hpp
src/Systems/PowerUpSystem/: PowerUpSystem.cpp  PowerUpSystem.hpp
src/Systems/TrackingSystem/: TrackingSystem.cpp  TrackingSystem.hpp
src/Systems/TransformEffectsSystem/: TransformEffectsSystem.cpp  TransformEffectsSystem.hpp
src/UIElements/: Card.h
src/WaveManager/: EnemySpecs.hpp  WaveManager.cpp  WaveManager.hpp
